# Stage

./: .gitignore
experiments/: README  a_star.py  art_pot.cfg  baseline.cfg  bitmaps  bsc_manager.py  c_overlord.py  client_side.cfg  cont_a_star.py  diff_find_target.cfg  diff_find_target.world  diff_gridcar.inc  empty.cfg  empty.world  find_target.cfg  find_target.world  follower.py  graph_util.py  gridcar.inc  imp_pot_controller.py  leader.py  leader_follower.py  linked_manager.py  ln_baseline.cfg  map.inc  multi_comp.cfg  multi_simple.cfg  net_baseline.cfg  network.world  network_simside_test.cfg  other_baseline.cfg  overlord.py  painter.py  parse_world.py  pot_a_star.py  pot_driver.py  potential_controller.py  run_empty.sh  run_player.py  simulator_only.cfg  (+14 more)
experiments/a_star_driver/: CMakeLists.txt  a_star.cfg
experiments/algs/: __init__.py  a_star.py  artificial_potential.py
experiments/art_pot_driver/: CMakeLists.txt  art_pot.cfg  art_pot_driver.cc
experiments/boundary_interface/: 124_boundary.def  CMakeLists.txt  boundary_interf_client.c  boundary_interf_client.h  boundary_interf_driver.cc  example.cfg  test_boundary_client.c  test_multi.c
experiments/c_controller/: build.sh  ptest.c
experiments/ccv_related/: sources.txt
experiments/configs/: art_pot.cfg  art_pot_ac.cfg  art_pot_old.cfg  boundary_multi.cfg  boundary_single.cfg  client_side.cfg  multi_comp.cfg  multi_comp_door.cfg  multi_comp_smrt.cfg  multi_comp_wn.cfg  simulator_only.cfg  single_comp.cfg  single_simple.cfg  time_test.cfg
experiments/configs/noisy/: art_pot_ac.cfg  art_pot_wn.cfg  multi_comp_wn.cfg
experiments/configs/test/: network_contside_test.cfg  rm_test.cfg
experiments/controllers/: Basic_Controller.py  Makefile  a_star.py  basic.c  door.py  example.py  follower.py  leader.py  pot_driver.py  time_driver.py  wave.py
experiments/controllers/c_cont/: Makefile  basic.c  (+3 more)
experiments/drivers/: noise.h
experiments/drivers/actuation_noise_driver/: CMakeLists.txt  actuation_noise_driver.cc
experiments/drivers/art_pot_driver/: CMakeLists.txt  art_pot_driver.cc
experiments/drivers/smrtln_interf/: CMakeLists.txt  smrtln_client.c
experiments/drivers/time_driver/: CMakeLists.txt  time_driver.cc
experiments/dumb_driver/: CMakeLists.txt  dumb_driver.cc
experiments/experiments/: c_test.ini  single_a_star.ini  single_wave.ini  wave.csv  wave.ods  wave_leader.ini
experiments/failures/: Standard_Failure.py
experiments/managers/: Basic_Manager.py  Linked_Manager.py  bsc_manager.py  linked_manager.py  manager_common.py
experiments/outs/: output_00_xcb.txt  output_01_xcb.txt  output_02_xcb.txt  output_03_unknown.txt  output_04_xcb.txt  output_05_unknown.txt  output_06_xcb_other.txt
experiments/ranger_noise_driver/: CMakeLists.txt  ranger_noise_driver.cc
experiments/results/: final_wave_output.txt  final_wave_output1.txt  final_wave_results.txt  final_wave_results1.txt  good_run_output.txt  good_run_output2.txt  good_run_output3.txt  good_run_results.txt  good_run_results2.txt  good_run_results3.txt
experiments/smrtlninterface/: 100_smrtln.def  example.cfg  smrtlninterf_client.c  smrtlninterf_client.h  smrtlninterf_driver.cc
experiments/stage_utils/: __init__.py  generic_start.py  graph_util.py  parse_world.py  setup_util.py
experiments/to_player/: CMakeLists.txt  svn.txt  to_player.sh
experiments/worlds/: bitmaps  door.inc  floor.inc  gridcar.inc  map.inc  moving_wall.inc  multi_simple.world  multi_simple_door.world  single_comp.world  target.inc
libstage/: model_ranger.cc
libstageplugin/: p_driver.cc  p_simulation.cc
(+156 files in other folders)
